--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
-    
-  
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.6.2",
+    "echarts": "^5.5.0",
     "element-plus": "^2.4.2",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "lodash": "^4.17.21",
     "nodemailer": "^6.9.7",
     "nodemailer-smtp-transport": "^2.7.4",
